# LearningSfml

./: .gitignore  CMakeLists.txt  PingPong.sln
src/AnimationTest/: AnimationTest.cpp  CMakeLists.txt  Constants.h
src/AnimationTest/Components/: MoveComponent.h
src/AnimationTest/Entities/: Player.h
src/AnimationTest/Events/: KeyPressedEvent.h
src/AnimationTest/Systems/: PlayerAnimationSystem.cpp  PlayerAnimationSystem.h  PlayerInputSystem.h  PlayerTransformSystem.h
src/Dungeon/: CMakeLists.txt  Constants.h  Dungeon.cpp  EnemyState.h
src/Dungeon/Components/: AnimationStateComponent.h  AttackComponent.h  EnemyStateComponent.h  HealthComponent.h  MoveComponent.h
src/Dungeon/Entities/: BidZombie.cpp  BidZombie.h  BigDemon.cpp  BigDemon.h  Coin.cpp  Coin.h  Floor.cpp  Floor.h
src/Dungeon/Events/: EnemyStateChanged.h
src/Dungeon/Systems/: AnimationStateSystem.cpp  AnimationStateSystem.h  EnemyControlSystem.cpp  EnemyControlSystem.h  EnemyMoveSystem.cpp  EnemyMoveSystem.h
src/Dungeon/Utils/: ComponentFactory.h  Helper.h  LevelGenerator.h
src/GameEngine/: CMakeLists.txt  CollidingGameObject.cpp  CollidingGameObject.h  CollisionContext.h  Entity.cpp  Entity.h  Events.h  GameContext.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GameObjectType.h  GameTime.h  ResourceType.h  Time.h
src/GameEngine/Components/: AnimationComponent.h  CollidingComponent.h  Component.h  ComponentType.h  DrawComponent.h  IntputComponent.h  TransformComponent.h
src/GameEngine/ECS/: Entity.h
src/GameEngine/Events/: AnimationEndEvent.h  CollisionEvent.h  Event.h  EventQueue.h  IEventHander.h  WindowClosedEvent.h
src/GameEngine/Managers/: EntityManager.h  EventManager.h  ResourceManager.cpp  ResourceManager.h  SystemManager.h
src/GameEngine/Objects/: CollidingGameObject.cpp  CollidingGameObject.h  CollidingObject.cpp  CollidingObject.h  DrawableObject.h  GameObject.cpp  GameObject.h  GameObjectType.h  TransformableObject.h
src/GameEngine/Systems/: AnimationSystem.h  CollidingSystem.h  DrawSystem.h  System.h  TransformSystem.h
src/GameEngine/Utils/: Debug.h  FPS.h  Helper.cpp  Helper.h  VectorMath.h
src/GameManager/: CMakeLists.txt  EventManager.cpp  EventManager.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  IEventHandler.h
src/GameManager/Events/: SystemErrorEvent.h
src/GameManager/Utils/: Helper.cpp  Helper.h
src/PingPong.Game/: Ball.cpp  Ball.h  CMakeLists.txt  Constants.h  PingPong.Game.cpp  PingPong.Game.h  Player.cpp  Player.h  ScoreManager.cpp  ScoreManager.h  Wall.cpp  Wall.h
src/PingPong.Game/Components/: TriggerComponent.h
src/PingPong.Game/Entities/: Ball.cpp  Ball.h  Player.cpp  Player.h  Score.cpp  Score.h  Trigger.h  Wall.cpp  Wall.h
src/PingPong.Game/Events/: TriggerEvent.h
src/PingPong.Game/Systems/: BallBounceSystem.h  CollidingSystem.h  GameResetSystem.h  InputSystem.h  PlayerSystem.h  TriggerSystem.h
src/PingPong.Game/Triggers/: EnemyTrigger.cpp  EnemyTrigger.h  PlayerTrigger.cpp  PlayerTrigger.h
